fix: backend and thumbnail generator